[package]
name = "chap2basic"
version.workspace = true
edition.workspace = true

[[bin]]
name = "basic_counter"
path = "src/bin/basic_counter.rs"

[[bin]]
name = "advanced_counter"
path = "src/bin/advanced_counter.rs"

[[bin]]
name = "parallel_counter"
path = "src/bin/parallel_counter.rs"

[dependencies]
tokio.workspace = true